--- a/views/FormSignUp.ejs
+++ b/views/FormSignUp.ejs
@@ -1,14 +1,23 @@
 <%- include('partials/header', {title: 'Sign Up'}) %>
-  <h3>Youverse Account Sign up</h3>
-  <form action="/signup" method="post">
-    <label>Name</label><br>
-    <input type="text" name="fullName" placeholder="please input your full name"><br><br>
-    <label>Email</label><br>
-    <input type="text" name="email" placeholder="your@email.com"><br><br>
-    <label>Username</label><br>
-    <input type="text" name="username" placeholder="new username"><br><br>
-    <label>Password</label><br>
-    <input type="text" name="password" placeholder="new password"><br><br>
-    <input type="submit" value="Sign Up">
-  </form>
+<h3>Youverse Account Sign up</h3>
+<% if (errors.length) { %>
+ <% errors.forEach(element => { %>
+  <p style="color: red;"><%= element %></p>
+ <% }) %>
+<% } %>
+<form action="/signup" method="post">
+  <label>Name</label><br />
+  <input
+    type="text"
+    name="fullName"
+    placeholder="please input your full name"
+  /><br /><br />
+  <label>Email</label><br />
+  <input type="text" name="email" placeholder="your@email.com" /><br /><br />
+  <label>Username</label><br />
+  <input type="text" name="username" placeholder="new username" /><br /><br />
+  <label>Password</label><br />
+  <input type="text" name="password" placeholder="new password" /><br /><br />
+  <input type="submit" value="Sign Up" />
+</form>
 <%- include('partials/footer') %>
