--- a/views/FormSignUp.ejs
+++ b/views/FormSignUp.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header', {title: 'Sign Up'}) %>
+<%- include('partials/headuni', {title: 'Sign Up'}) %>
 <h3>Youverse Account Sign up</h3>
 <% if (errors.length) { %>
  <% errors.forEach(element => { %>
