--- a/views/partials/headuni.ejs
+++ b/views/partials/headuni.ejs
@@ -26,6 +26,8 @@
   <nav>
     <h1>Youverse</h1>
     <a href="/"><button>Home</button></a>
-    <a href=""><button>Profile</button></a>
+    <a href="/profile"><button>Profile</button></a>
+    <a href="/login"><button>Login</button></a>
+    <a href="/signup"><button>Sign Up</button></a>
   </nav>
   <br>
