modified routes and views

--- a/views/HomeBuyer.ejs
+++ b/views/HomeBuyer.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/headadmin', {title: 'Admin'}) %>
+<%- include('partials/headbuyer', {title: 'Shop'}) %>
 
 <a href="/admin/product/add"><button>Add New Product</button></a>
 <br>
