--- a/views/partials/headadmin.ejs
+++ b/views/partials/headadmin.ejs
@@ -25,7 +25,8 @@
 <body>
   <nav>
     <h1>Youverse</h1>
-    <a href="/"><button>Home</button></a>
+    <a href="/admin"><button>Home</button></a>
     <a href="/profile"><button>Profile</button></a>
+    <a href=""><button>Logout</button></a>
   </nav>
   <br>
