--- a/views/partials/headbuyer.ejs
+++ b/views/partials/headbuyer.ejs
@@ -27,6 +27,6 @@
     <h1>Youverse</h1>
     <a href="/"><button>Home</button></a>
     <a href="/profile"><button>Profile</button></a>
-    <a href=""><button>Log Out</button></a>
+    <a href=""><button>Logout</button></a>
   </nav>
   <br>
